--- a/FM4MC/Collector/build.gradle
+++ b/FM4MC/Collector/build.gradle
@@ -25,7 +25,7 @@ sourceSets {
     main {
         java {
             srcDirs = ["src"]
-            exclude "src/test/**"
+            exclude "test/**"
         }
         resources {
             srcDirs = ['src/resources']
@@ -44,9 +44,7 @@ dependencies {
     implementation 'com.google.protobuf:protobuf-gradle-plugin:0.9.1'
     implementation 'com.google.protobuf:protobuf-java:3.21.7'
 
-    implementation 'org.mockito:mockito-core:4.0.0'
-    implementation 'org.mockito:mockito-all:1.10.19'
-    implementation 'org.mockito:mockito-inline:4.0.0'
+    testImplementation 'org.mockito:mockito-core:5.19.0'
 
     implementation 'org.apache.poi:poi-ooxml:5.2.2'
 
