--- a/FM4MC/Configuration-Manager/build.gradle
+++ b/FM4MC/Configuration-Manager/build.gradle
@@ -11,6 +11,9 @@ repositories {
 
     maven {
         url = uri('https://projects.itemis.de/nexus/content/repositories/OS/')
+        content {
+            includeGroup "tools.aqua"
+        }
     }
     google()
 }
@@ -35,9 +38,7 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.commons/commons-math3
     implementation 'org.apache.commons:commons-math3:3.6.1'
 
-    implementation 'org.mockito:mockito-core:4.0.0'
-    implementation 'org.mockito:mockito-all:1.10.19'
-    implementation 'org.mockito:mockito-inline:4.0.0'
+    testImplementation 'org.mockito:mockito-core:5.19.0'
 
     implementation 'com.github.f4b6a3:uuid-creator:6.0.0'
 }
