--- a/FM4MC/Shared/build.gradle
+++ b/FM4MC/Shared/build.gradle
@@ -13,7 +13,7 @@ sourceSets {
     main {
         java {
             srcDirs = ["src"]
-            exclude "src/test/**"
+            exclude "test/**"
         }
     }
     test {
@@ -29,9 +29,7 @@ dependencies {
     implementation 'com.google.protobuf:protobuf-gradle-plugin:0.9.1'
     implementation 'com.google.protobuf:protobuf-java:3.21.7'
 
-    implementation 'org.mockito:mockito-core:4.0.0'
-    implementation 'org.mockito:mockito-all:1.10.19'
-    implementation 'org.mockito:mockito-inline:4.0.0'
+    testImplementation 'org.mockito:mockito-core:5.19.0'
 
     implementation 'org.apache.poi:poi-ooxml:5.2.2'
 
