--- a/.gitignore
+++ b/.gitignore
@@ -437,3 +437,7 @@ FodyWeavers.xsd
 # Configuration files
 *.properties
 QoRManager/.run/StartupVerdammterMist.run.xml
+
+Eval/Scripts/venv/
+Eval/Scripts/python/
+Eval/Scripts/python-*.exe
