--- a/FM4MC/Configuration-Manager/build.gradle
+++ b/FM4MC/Configuration-Manager/build.gradle
@@ -46,3 +46,13 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'Startup'
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
