Enable selecting FM4MC components in Docker

--- a/Dockersetup/Dockerfile
+++ b/Dockersetup/Dockerfile
@@ -17,7 +17,8 @@ COPY --from=build /workspace/FM4MC/*/build/libs/*.jar /app/
 # Include required test data
 COPY FM4MC/TestData /app/TestData
 # Copy run script
-COPY Dockersetup/run_bench.sh /app/run_bench.sh
-RUN sed -i 's/\r$//' /app/run_bench.sh && chmod +x /app/run_bench.sh
-# Default entry point runs the benchmark and exports data
-ENTRYPOINT ["/app/run_bench.sh"]
+COPY Dockersetup/run.sh /app/run.sh
+RUN sed -i 's/\r$//' /app/run.sh && chmod +x /app/run.sh
+# Default entry point runs a component or benchmark; mode can be overridden via CMD
+ENTRYPOINT ["/app/run.sh"]
+CMD ["jmh"]
