add scripts for docker

--- a/Dockersetup/Dockerfile
+++ b/Dockersetup/Dockerfile
@@ -1,24 +1,30 @@
-# Build FM4MC using Gradle and package runtime artifacts
-FROM eclipse-temurin:21-jdk AS build
-WORKDIR /workspace
-# Copy sources
-COPY FM4MC/ /workspace/FM4MC/
-# Build jars, normalizing line endings for the Gradle wrapper
-RUN cd FM4MC \
-    && sed -i 's/\r$//' gradlew \
-    && chmod +x gradlew \
-    && ./gradlew --no-daemon build
+# Dockersetup/Dockerfile
+FROM eclipse-temurin:21-jdk
 
-# Runtime image containing built jars and test data
-FROM eclipse-temurin:21-jre
-WORKDIR /app
-# Copy runtime artifacts
-COPY --from=build /workspace/FM4MC/*/build/libs/*.jar /app/
-# Include required test data
-COPY FM4MC/TestData /app/TestData
-# Copy run script
-COPY Dockersetup/run.sh /app/run.sh
-RUN sed -i 's/\r$//' /app/run.sh && chmod +x /app/run.sh
-# Default entry point runs a component or benchmark; mode can be overridden via CMD
-ENTRYPOINT ["/app/run.sh"]
-CMD ["jmh"]
+# Basic tools
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    bash ca-certificates git unzip python3 python3-venv python3-pip \
+  && rm -rf /var/lib/apt/lists/*
+
+# Copy full repository into /artifact
+WORKDIR /artifact
+COPY . /artifact
+COPY /FM4MC/TestData /TestData
+
+# Fix Windows line endings
+RUN sed -i 's/\r$//' FM4MC/gradlew \
+ && find . -name "*.sh" -exec sed -i 's/\r$//' {} +
+
+# Ensure scripts are executable
+RUN chmod +x FM4MC/gradlew
+RUN chmod +x Dockersetup/run_bench.sh || true
+RUN chmod +x scripts/*.sh || true
+RUN chmod +x Eval/Scripts/*.sh || true
+
+# Build once
+WORKDIR /artifact/FM4MC
+RUN ./gradlew --no-daemon clean assemble
+
+# Default command: run smoke benchmarks (can be overridden)
+WORKDIR /artifact
+CMD ["bash", "scripts/smoke_test.sh"]
